@@ -1,4 +1,4 @@
- $NetBSD: CHANGES-8.3,v 1.1.2.141 2022/08/02 15:44:56 snj Exp $
+ $NetBSD: CHANGES-8.3,v 1.1.2.142 2022/08/12 15:20:07 martin Exp $
 
 A complete list of changes from the NetBSD 8.2 release to the NetBSD 8.3
 release:
@@ -2734,4 +2734,10 @@ sys/dev/pci/pcidevs_data.h			regen
 	- Add some Broadcom / LSI RAID cards.
 	- Fix typos and whitespace.
 	[msaitoh, ticket #1754]
+
+sys/dev/ic/dwc_gmac.c				1.76,1.77
+
+	Fix chip configuration so that stripping of the FCS is
+	consistent for all packet types.
+	[sekiya, ticket #1755]
 
